[tool.black]
line-length = 127
target-version = ['py37', 'py38']
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = "--full-trace -v"
testpaths = ["tests"]

[tool.poetry]
name = "pymine"
version = "0.1.0"
description = ""
authors = ["Milo Weinberg <iapetus011@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.7.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
