[tool.black]
line-length = 127
target-version = ['py37', 'py38']
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = "--full-trace -v"
testpaths = ["tests"]

[tool.poetry]
name = "pymine"
version = "0.1.0"
description = "A fast and easy to use, moddable, Python based Minecraft server!"
authors = ["Milo Weinberg <iapetus011@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.7.9"
aioconsole = "^0.3.1"
aiofile = "^3.4.0"
aiohttp = "^3.7.4"
asyncio-dgram = "^1.2.0"
colorama = "^0.4.4"
cryptography = "^3.4.6"
GitPython = "^3.1.13"
immutables = "^0.15"
mutf8 = "^1.0.3"
numpy = "^1.20.1"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
