[tool.black]
line-length = 127
target-version = ['py37', 'py38']
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = "--full-trace -v"
testpaths = ["tests"]

[tool.poetry]
name = "pymine"
version = "0.1.0"
description = "A fast and easy to use, moddable, Python based Minecraft server!"
authors = ["Your Name <you@example.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
aioconsole = "0.3.1"
aiofile = "3.4.0"
aiohttp = "3.7.4"
async-timeout = "3.0.1"
asyncio-dgram = "1.2.0"
attrs = "20.3.0"
caio = "0.7.0"
cffi = "1.14.5"
chardet = "3.0.4"
colorama = "0.4.4"
cryptography = "3.4.6"
gitdb = "4.0.5"
GitPython = "3.1.13"
idna = "3.1"
immutables = "0.15"
multidict = "5.1.0"
mutf8 = "1.0.3"
numpy = "1.20.1"
pycparser = "2.20"
PyYAML = "5.4.1"
smmap = "3.0.5"
typing-extensions = "3.7.4.3"
yarl = "1.6.3"
uvloop = {version = "^0.15.2", optional = true}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
